fixing scaling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,10 +15,12 @@
 html {
 	font-family: 'AirbnbCereal', Arial, sans-serif;
 	background: #02a8d8 ;
+    margin: 0;
 }
 
 body{
 	background: #02a8d8 ;
+    margin: 0;
 }
 
 a {
@@ -896,7 +898,7 @@ transition: all 0.4s ease 0s;
 @media only screen and (max-width: 1125px) {
     .button2{
       display: block;
-      width: 110%;
+      width: 100%;
       height: 45px;
       line-height: 40px;
       font-size: 18px;
@@ -910,7 +912,7 @@ transition: all 0.4s ease 0s;
       transition: all .35s;
       margin-top: -10px;
       margin-bottom: -100px;
-      left: -5%;
+      left: 0%;
       background: #02a8d8;
     }
 
